@@ -23,7 +23,9 @@ namespace build2
     // `c.config` -- loads c.guess and sets more variables.
     // `c`        -- loads c.config and registers target types and rules.
     // `c.objc`   -- registers m{} target type and enables Objective-C
-    //               compilation.
+    //               compilation. Must be loaded after c.
+    // `c.as-cpp` -- registers S{} target type and enables Assembler with
+    //               C preprocessor compilation. Must be loaded after c.
     //
     extern "C" LIBBUILD2_C_SYMEXPORT const module_functions*
     build2_c_load ();
