@@ -16,6 +16,7 @@ namespace build2
     using cc::h;
     using cc::c;
     using cc::m;
+    using cc::S;
   }
 }
 
